syntax = "proto3";
package rpctransport;
option go_package = "/pb";

import "google/protobuf/wrappers.proto";
import "user_msg.proto";


service UserController{
    rpc CreateUser(UserRequest) returns (google.protobuf.StringValue);
    rpc UpdateUser(UserRequest) returns (google.protobuf.StringValue);
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.StringValue);
    rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
    rpc GetUserEmailById(GetUserEmailByIdRequest) returns (google.protobuf.StringValue);
    rpc AddAdmin(AddAdminRequest) returns (google.protobuf.StringValue);
}