syntax="proto3";
option go_package="./pb";
package proto;


service UserService{
    rpc GetUserEmailById(GetUserEmailByIdRequest) returns (ResponseMessage);
}

message GetUserEmailByIdRequest{
    uint32 id = 1;
}

message ResponseMessage{
    string message = 1;
}