syntax = "proto3";
package rpctransport;
option go_package = "/pb";


message UserRequest{
    string email = 1;
    string password = 2;
    bool   status = 3;
}

message DeleteUserRequest {
    string email = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message GetUserByEmailResponse {
    uint32 id = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    bool status = 5;
}

message AddAdminRequest{
    string email = 1;
}

message GetUserEmailByIdRequest{
    uint32 id = 1;
}